[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exorr-recon-toolkit"
version = "1.0.0"
description = "EXORR Recon Toolkit — automated attack surface discovery pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "EXORR Security", email = "exorrnull@gmail.com"}]
keywords = ["recon", "subfinder", "nmap", "nuclei", "httpx", "attack-surface", "osint"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = []

[project.scripts]
exorr-recon = "exorr_recon.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
include = ["exorr_recon*"]
